syntax = "proto3";
import "crypto/coconut/scheme/proto/types.proto";
import "crypto/elgamal/proto/types.proto";

package commands;
option go_package = "0xacab.org/jstuczyn/CoconutGo/common/comm/commands";

enum StatusCode {
    OK = 0;
    UNKNOWN = 1;
    INVALID_COMMAND = 2;
    INVALID_ARGUMENTS = 3;
    PROCESSING_ERROR = 4;
    NOT_IMPLEMENTED = 5;
    REQUEST_TIMEOUT = 6;
    UNAVAILABLE = 7;
}

message Status {
    int32 code = 1;
    string message = 2;
}

message SignRequest {
    repeated bytes pubM = 1;
}

message SignResponse {
    coconut.ProtoSignature sig = 1;
    Status status = 2;
}

message VerificationKeyRequest {

}

message VerificationKeyResponse {
    coconut.ProtoVerificationKey vk = 1;
    Status status = 2;
}

message VerifyRequest {
    coconut.ProtoSignature sig = 1;
    repeated bytes pubM = 2;
}

message VerifyResponse {
    bool isValid = 1;
    Status status = 2;
}

message BlindSignRequest {
    repeated bytes pubM = 1;
    coconut.ProtoBlindSignMats blindSignMats = 2;
    elgamal.ProtoPublicKey egPub = 3;
}

message BlindSignResponse {
    coconut.ProtoBlindedSignature sig = 1;
    Status status = 2;
}

message BlindVerifyRequest {
    coconut.ProtoSignature sig = 1;
    repeated bytes pubM = 2;
    coconut.ProtoBlindShowMats blindShowMats = 3;
}

message BlindVerifyResponse {
    bool isValid = 1;
    Status status = 2; 
}