syntax = "proto3";

package transaction;
option go_package = "0xacab.org/jstuczyn/CoconutGo/tendermint/nymabci/transaction";

message NewAccountRequest {
    bytes PublicKey = 1; // Public Key of the user used to derive account address and validate signature
    bytes Credential = 2; // represents some optional credential from an IP if required
    bytes Sig = 3; // Signature on request to confirm its validity + asserts knowledge of private key
}

